✨ Reencode task for worker
